fix social media link spacing on profile
this was a casualty of yesterday’s gnarly merge

--- a/src/css/profile/profile-only.less
+++ b/src/css/profile/profile-only.less
@@ -23,19 +23,6 @@
       }
     }
 
-    .social-media {
-      i {
-        @media (min-width: @screen-sm) {
-          margin-left: @std-padding/4;
-          margin-right: @std-padding/4;
-
-          &:first-child {
-            margin-left: @std-padding;
-          }
-        }
-      }
-    }
-
     .send-message i {
       &, &:hover {color: white;}
       font-size: 20px;
